# align-linguistic-alignment

./: .MANIFEST.in.icloud  .gitignore  .gitignore.save  ALIGN_MASTER-AP_edits.ipynb  ALIGN_MASTER.ipynb  LICENSE  MANIFEST.in  README.html  README.md  contractions.txt  environment.yml  forSemantic.txt  postBuild  pyproject.toml  requirements.txt  requirements_py3.txt  runtime.txt  setup.py  todo-2017-02-10.txt  todo-software-updates.txt
ANALYSIS_RESULTS/: AlignmentC2C.txt  AlignmentT2T.txt
PREPPED_TRANSCRIPTS/: 11_1-0-2.txt  11_1-1-3.txt  12_1-0-2.txt  12_1-1-3.txt  12_2-0-3.txt  12_2-1-2.txt  13_1-0-2.txt  13_1-1-3.txt  13_2-0-2.txt  13_2-1-3.txt  14_2-0-3.txt  14_2-1-2.txt  15_1-0-2.txt  15_1-1-3.txt  15_2-0-2.txt  15_2-1-3.txt  16_2-0-3.txt  16_2-1-2.txt  17_2-0-2.txt  18_1-0-3.txt  18_1-1-2.txt  19_1-0-2.txt  19_1-1-3.txt  19_2-0-3.txt  19_2-1-2.txt  1_2-0-2.txt  1_2-1-3.txt  20_2-0-3.txt  20_2-1-2.txt  21_1-0-3.txt  21_1-1-2.txt  21_2-0-3.txt  21_2-1-2.txt  23_2-0-2.txt  23_2-1-3.txt  24_1-0-2.txt  24_1-1-3.txt  24_2-0-2.txt  24_2-1-3.txt  25_1-0-3.txt  (+54 more)
TRANSCRIPTS/: 11_1-0-2.txt  11_1-1-3.txt  12_1-0-2.txt  12_1-1-3.txt  12_2-0-3.txt  12_2-1-2.txt  13_1-0-2.txt  13_1-1-3.txt  13_2-0-2.txt  13_2-1-3.txt  14_2-0-3.txt  14_2-1-2.txt  15_1-0-2.txt  15_1-1-3.txt  15_2-0-2.txt  15_2-1-3.txt  16_2-0-3.txt  16_2-1-2.txt  17_2-0-2.txt  18_1-0-3.txt  18_1-1-2.txt  19_1-0-2.txt  19_1-1-3.txt  19_2-0-3.txt  19_2-1-2.txt  1_2-0-2.txt  1_2-1-3.txt  20_2-0-3.txt  20_2-1-2.txt  21_1-0-3.txt  21_1-1-2.txt  21_2-0-3.txt  21_2-1-2.txt  23_2-0-2.txt  23_2-1-3.txt  24_1-0-2.txt  24_1-1-3.txt  24_2-0-2.txt  24_2-1-3.txt  25_1-0-3.txt  (+54 more)
align/: __init__.py  calculate_alignment.py  calculate_alignment_p3.ipynb  calculate_alignment_private.ipynb  calculate_alignment_public.py  datasets.py  prepare_transcripts.py  prepare_transcripts_p3.ipynb  prepare_transcripts_private.ipynb
align/notebooks/: align-childes_example.ipynb
align_notebooks/: ALIGN_MASTER.ipynb
align_package/: MANIFEST.in  setup.py
align_package/align/: __init__.py  calculate_alignment.py  datasets.py  prepare_transcripts.py
align_package/doc/: conf.py  (+1 more)
binder/: postBuild
doc/: .index.rst.icloud  .make.bat.icloud  Makefile  conf.py  index.rst  prepare_transcripts.rst
docs/: conf.py  modules.rst  py-modindex.html  search.html  searchindex.js
examples/: .align-childes_example.ipynb.icloud  .align-devilsadvocate_example.ipynb.icloud  align-childes_example.ipynb  align-childes_semantic_alignment_example.ipynb  align-devilsadvocate_example.ipynb  align_concatenated_dataframe.txt  example_of_transcription_format.txt
package_files/: fillers.txt  req.txt  requirements.txt
toy_data-analysis/: AlignmentT2T.txt
toy_data-prepped/: dyad_12-condition_2.txt  dyad_15-condition_1.txt
(+1077 files in other folders)
